--- a/less/fonts.less
+++ b/less/fonts.less
@@ -1,4 +1,4 @@
-@cdn: 'https://digitallinguistics.blob.core.windows.net';
+@cdn: 'https://cdn.digitallinguistics.io';
 
 // Fira Sans
 @font-face {
@@ -41,6 +41,7 @@
   font-weight: bold;
 }
 
+// Fira Mono
 @font-face {
   font-family: 'Fira Mono';
   src:
