init pattern library

--- a/css/reset.css
+++ b/css/reset.css
@@ -109,25 +109,12 @@ code,
 del,
 dfn,
 em,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-hr,
 i,
-img,
-input,
 ins,
 kbd,
-map,
 mark,
-object,
-p,
 q,
 samp,
-select,
 s,
 small,
 span,
@@ -135,7 +122,7 @@ strike,
 strong,
 sub,
 sup,
-textarea,
+time,
 tt,
 var {
   display: inline;
