--- a/less/reset.less
+++ b/less/reset.less
@@ -28,7 +28,7 @@ article, aside, audio, canvas, details, embed, figure, figcaption, footer, heade
 }
 
 // set inline elements to display: inline
-a, abbr, acronym, b, bdo, big, br, cite, code, del, dfn, em, h1, h2, h3, h4, h5, h6, hr, i, img, input, ins, kbd, map, mark, object, p, q, samp, select, s, small, span, strike, strong, sub, sup, textarea, tt, var {
+a, abbr, acronym, b, bdo, big, br, cite, code, del, dfn, em, i, ins, kbd, mark, q, samp, s, small, span, strike, strong, sub, sup, time, tt, var {
   display: inline;
 }
 
