--- a/less/reset.less
+++ b/less/reset.less
@@ -32,6 +32,11 @@ a, abbr, acronym, b, bdo, big, br, cite, code, del, dfn, em, i, ins, kbd, mark, 
   display: inline;
 }
 
+// set elements whose contents are typically inline to display: block
+blockquote, button, caption, dd, dt, figcaption, h1, h2, h3, h4, h5, h6, input, legend, option, output, p, pre, select, summary, textarea {
+  display: block;
+}
+
 // remove link styling
 a, a:link, a:visited, a:hover, a:active {
   background: transparent;
