--- a/patterns/patterns.less
+++ b/patterns/patterns.less
@@ -3,12 +3,33 @@ html {
 }
 
 body {
+
   box-sizing: border-box;
   padding: 2rem;
+
+}
+
+.color {
+
+  flex-direction: row;
+
+  pre {
+    width: 15em;
+  }
+
+}
+
+.patterns-h1,
+.patterns-h2,
+{
+  padding: 1em;
+  text-align: center;
 }
 
 .patterns-h1 {
   font-size: 3em;
-  padding: 1em;
-  text-align: center;
+}
+
+.patterns-h2 {
+  font-size: 2em;
 }
