--- a/less/dlx.less
+++ b/less/dlx.less
@@ -1,53 +1,121 @@
 @cdn:  'https://cdn.digitallinguistics.io';
 
-@wugbotblue:      #6FD1F6;
+@wugblue:                                        #6FD1F6;
+.wugblue                     { color:            @wugblue; }
+.wugblue-background          { background-color: @wugblue; }
 
-@verydarkblue:    #017CF2;
-@darkblue:        #0F89FF;
-@blue:            #3399ff;
-@lightblue:       #5CAFFF;
-@verylightblue:   #88C4FE;
+@verydarkblue:                                   #017CF2;
+@darkblue:                                       #0F89FF;
+@blue:                                           #3399ff;
+@lightblue:                                      #5CAFFF;
+@verylightblue:                                  #88C4FE;
 
-@gray:            #F5F2F0;
+.verydarkblue                { color:            @verydarkblue; }
+.darkblue                    { color:            @darkblue; }
+.blue                        { color:            @blue; }
+.lightblue                   { color:            @lightblue; }
+.verylightblue               { color:            @verylightblue; }
 
-@verylightgreen:  #7FFED1;
-@lightgreen:      #4FFFC1;
-@green:           #23FFB1;
-@darkgreen:       #00FFA5;
-@verydarkgreen:   #00F39D;
+.verydarkblue-background     { background-color: @verydarkblue; }
+.darkblue-background         { background-color: @darkblue; }
+.blue-background             { background-color: @blue; }
+.lightblue-background        { background-color: @lightblue; }
+.verylightblue-background    { background-color: @verylightblue; }
 
-@verylightorange: #FFA97F;
-@lightorange:     #FF884F;
-@orange:          #FF6A23;
-@darkorange:      #FF5300;
+@gray:                                           #F5F2F0;
+@grey:                                           @gray;
+.gray                        { color:            @gray; }
+.gray-background             { background-color: @gray; }
 
-@verylightpurple: #9791FE;
-@lightpurple:     #7068FF;
-@purple:          #4D42FF;
-@darkpurple:      #2A1DFF;
-@verydarkpurple:  #1002F4;
+@verylightgreen:                                 #7FFED1;
+@lightgreen:                                     #4FFFC1;
+@green:                                          #23FFB1;
+@darkgreen:                                      #00FFA5;
+@verydarkgreen:                                  #00F39D;
 
-@verylightred:    #FF9797;
-@lightred:        #E96363;
-@red:             #CA3C3C;
-@darkred:         #AA1F1F;
-@verydarkred:     #830505;
+.verylightgreen              { color:            @verylightgreen; }
+.lightgreen                  { color:            @lightgreen; }
+.green                       { color:            @green; }
+.darkgreen                   { color:            @darkgreen; }
+.verydarkgreen               { color:            @verydarkgreen; }
 
-@lightblue-transparent:     rgba(92, 175, 255, 0.2);
-@verylightblue-transparent: rgba(136, 196, 254, 0.2);
+.verylightgreen-background   { background-color: @verylightgreen; }
+.lightgreen-background       { background-color: @lightgreen; }
+.green-background            { background-color: @green; }
+.darkgreen-background        { background-color: @darkgreen; }
+.verydarkgreen-background    { background-color: @verydarkgreen; }
+
+@verylightorange:                                #FFA97F;
+@lightorange:                                    #FF884F;
+@orange:                                         #FF6A23;
+@darkorange:                                     #FF5300;
+
+.verylightorange             { color:            @verylightorange; }
+.lightorange                 { color:            @lightorange; }
+.orange                      { color:            @orange; }
+.darkorange                  { color:            @darkorange; }
+
+.verylightorange-background  { background-color: @verylightorange; }
+.lightorange-background      { background-color: @lightorange; }
+.orange-background           { background-color: @orange; }
+.darkorange-background       { background-color: @darkorange; }
+
+@verylightpurple:                                #9791FE;
+@lightpurple:                                    #7068FF;
+@purple:                                         #4D42FF;
+@darkpurple:                                     #2A1DFF;
+@verydarkpurple:                                 #1002F4;
+
+.verylightpurple             { color:            @verylightpurple; }
+.lightpurple                 { color:            @lightpurple; }
+.purple                      { color:            @purple; }
+.darkpurple                  { color:            @darkpurple; }
+.verydarkpurple              { color:            @verydarkpurple; }
+
+.verylightpurple-background  { background-color: @verylightpurple; }
+.lightpurple-background      { background-color: @lightpurple; }
+.purple-background           { background-color: @purple; }
+.darkpurple-background       { background-color: @darkpurple; }
+.verydarkpurple-background   { background-color: @verydarkpurple; }
+
+@verylightred:                                   #FF9797;
+@lightred:                                       #E96363;
+@red:                                            #CA3C3C;
+@darkred:                                        #AA1F1F;
+@verydarkred:                                    #830505;
+
+.verylightred                { color:            @verylightred; }
+.lightred                    { color:            @lightred; }
+.red                         { color:            @red; }
+.darkred                     { color:            @darkred; }
+.verydarkred                 { color:            @verydarkred; }
+
+.verylightred-background     { background-color: @verylightred; }
+.lightred-background         { background-color: @lightred; }
+.red-background              { background-color: @red; }
+.darkred-background          { background-color: @darkred; }
+.verydarkred-background      { background-color: @verydarkred; }
+
+@lightblue-transparent:                          rgba(92, 175, 255, 0.2);
+@verylightblue-transparent:                      rgba(136, 196, 254, 0.2);
+
+.lightblue-transparent       { background-color: @lightblue-transparent; }
+.verylightblue-transparent   { background-color: @verylightblue-transparent; }
 
 .bulleted {
 
   list-style: disc outside none;
+  margin-left: 1.5em;
 
   li {
     display: list-item;
+    padding: 0.5em 0em;
   }
 
 }
 
 code {
-  background-color: @gray;
+  .gray-background;
   border-radius: 3px;
   font-family: 'Fira Mono', 'Monaco', 'Courier New', monospace;
   font-size: 0.75em;
@@ -57,10 +125,10 @@ code {
 }
 
 .link {
+  .blue;
   border-bottom: 1px solid white;
-  color: @blue;
-  &:link { color: @blue; }
-  &:visited { color: @blue; }
+  &:link { .blue; }
+  &:visited { .blue; }
   &:hover { border-bottom: 1px solid @blue; }
-  &:active { color: @blue; }
+  &:active { .blue; }
 }
