--- a/patterns/patterns.css
+++ b/patterns/patterns.css
@@ -1,15 +1,25 @@
-html {
-  font-family: 'Fira Sans';
-}
 body {
-  box-sizing: border-box;
   padding: 2rem;
 }
 .color {
+  align-items: center;
   flex-direction: row;
+  padding: 0.25em 0em;
 }
-.color pre {
+.color span {
+  display: flex;
+  align-items: flex-start;
   width: 15em;
+}
+#colors p {
+  padding: 0.5em 0em;
+}
+#colors section {
+  padding: 0.5em 1em;
+}
+#colors section {
+  align-items: center;
+  padding: 0.5em 1em;
 }
 .patterns-h1,
 .patterns-h2 {
@@ -21,4 +31,8 @@ body {
 }
 .patterns-h2 {
   font-size: 2em;
+}
+.swatch {
+  cursor: pointer;
+  padding: 0.5em 1em;
 }
