--- a/less/dlx.less
+++ b/less/dlx.less
@@ -1,12 +1,14 @@
+// VARIABLES
 @cdn:  'https://cdn.digitallinguistics.io';
 
+// COLORS
 @wugblue:                                        #6FD1F6;
 .wugblue                     { color:            @wugblue; }
 .wugblue-background          { background-color: @wugblue; }
 
 @verydarkblue:                                   #017CF2;
 @darkblue:                                       #0F89FF;
-@blue:                                           #3399ff;
+@blue:                                           #3399FF;
 @lightblue:                                      #5CAFFF;
 @verylightblue:                                  #88C4FE;
 
@@ -16,9 +18,9 @@
 .lightblue                   { color:            @lightblue; }
 .verylightblue               { color:            @verylightblue; }
 
-.verydarkblue-background     { background-color: @verydarkblue; }
-.darkblue-background         { background-color: @darkblue; }
-.blue-background             { background-color: @blue; }
+.verydarkblue-background     { background-color: @verydarkblue; color: white; }
+.darkblue-background         { background-color: @darkblue; color: white; }
+.blue-background             { background-color: @blue; color: white; }
 .lightblue-background        { background-color: @lightblue; }
 .verylightblue-background    { background-color: @verylightblue; }
 
@@ -58,7 +60,7 @@
 .verylightorange-background  { background-color: @verylightorange; }
 .lightorange-background      { background-color: @lightorange; }
 .orange-background           { background-color: @orange; }
-.darkorange-background       { background-color: @darkorange; }
+.darkorange-background       { background-color: @darkorange; color: white; }
 
 @verylightpurple:                                #9791FE;
 @lightpurple:                                    #7068FF;
@@ -73,10 +75,10 @@
 .verydarkpurple              { color:            @verydarkpurple; }
 
 .verylightpurple-background  { background-color: @verylightpurple; }
-.lightpurple-background      { background-color: @lightpurple; }
-.purple-background           { background-color: @purple; }
-.darkpurple-background       { background-color: @darkpurple; }
-.verydarkpurple-background   { background-color: @verydarkpurple; }
+.lightpurple-background      { background-color: @lightpurple; color: white; }
+.purple-background           { background-color: @purple; color: white; }
+.darkpurple-background       { background-color: @darkpurple; color: white; }
+.verydarkpurple-background   { background-color: @verydarkpurple; color: white; }
 
 @verylightred:                                   #FF9797;
 @lightred:                                       #E96363;
@@ -92,9 +94,9 @@
 
 .verylightred-background     { background-color: @verylightred; }
 .lightred-background         { background-color: @lightred; }
-.red-background              { background-color: @red; }
-.darkred-background          { background-color: @darkred; }
-.verydarkred-background      { background-color: @verydarkred; }
+.red-background              { background-color: @red; color: white; }
+.darkred-background          { background-color: @darkred; color: white; }
+.verydarkred-background      { background-color: @verydarkred; color: white; }
 
 @lightblue-transparent:                          rgba(92, 175, 255, 0.2);
 @verylightblue-transparent:                      rgba(136, 196, 254, 0.2);
@@ -102,6 +104,14 @@
 .lightblue-transparent       { background-color: @lightblue-transparent; }
 .verylightblue-transparent   { background-color: @verylightblue-transparent; }
 
+// GLOBAL
+body {
+  box-sizing: border-box;
+  font-family: 'Fira Sans';
+  line-height: 1.5em;
+}
+
+// CLASSES
 .bulleted {
 
   list-style: disc outside none;
@@ -109,7 +119,6 @@
 
   li {
     display: list-item;
-    padding: 0.5em 0em;
   }
 
 }
@@ -121,14 +130,17 @@ code {
   font-size: 0.75em;
   font-style: normal;
   padding: 0.25em;
-  white-space: pre-wrap;
 }
+
+  p > code {
+    white-space: pre;
+  }
 
 .link {
   .blue;
-  border-bottom: 1px solid white;
+  border-bottom: 0.075em solid white;
   &:link { .blue; }
   &:visited { .blue; }
-  &:hover { border-bottom: 1px solid @blue; }
+  &:hover { border-bottom: 0.075em solid @blue; }
   &:active { .blue; }
 }
