--- a/patterns/patterns.less
+++ b/patterns/patterns.less
@@ -6,12 +6,12 @@ body {
 
   align-items: center;
   flex-direction: row;
+  justify-content: space-between;
   padding: 0.25em 0em;
 
   span {
-    display: flex;
     align-items: flex-start;
-    width: 15em;
+    display: flex;
   }
 
 }
@@ -23,14 +23,10 @@ body {
   }
 
   section {
+    align-items: stretch;
     padding: 0.5em 1em;
   }
 
-}
-
-#colors section {
-  align-items: center;
-  padding: 0.5em 1em;
 }
 
 .patterns-h1,
