fix issue with line height
closes #9

--- a/css/reset.css
+++ b/css/reset.css
@@ -85,14 +85,13 @@ select,
 summary,
 time,
 video {
-  border: none;
+  border: 0;
   border-collapse: collapse;
   display: flex;
   flex-direction: column;
   font: inherit;
-  line-height: inherit;
   margin: 0;
-  outline: none;
+  outline: 0;
   padding: 0;
   text-decoration: none;
   vertical-align: baseline;
@@ -160,12 +159,12 @@ a:active {
   text-decoration: none;
 }
 body {
-  background-color: white;
+  background: white;
+  color: black;
   font-stretch: normal;
   font-style: normal;
   font-variant: normal;
   font-weight: normal;
-  line-height: 1;
   min-height: 100vh;
 }
 blockquote,
@@ -179,11 +178,15 @@ q:after {
   content: '';
   content: none;
 }
+:focus {
+  outline: 0;
+}
 ol,
 ul {
   list-style: none;
 }
 table {
+  border-spacing: 0;
   display: table;
 }
 tbody {
