--- a/css/dlx.css
+++ b/css/dlx.css
@@ -174,7 +174,7 @@
 body {
   box-sizing: border-box;
   font-family: 'Fira Sans';
-  line-height: 1.5em;
+  line-height: 1.5;
 }
 .bulleted {
   list-style: disc outside none;
