--- a/less/dlx.less
+++ b/less/dlx.less
@@ -112,6 +112,10 @@ body {
 }
 
 // CLASSES
+abbr {
+  font-style: italic;
+}
+
 .bulleted {
 
   list-style: disc outside none;
@@ -129,12 +133,10 @@ code {
   font-family: 'Fira Mono', 'Monaco', 'Courier New', monospace;
   font-size: 0.75em;
   font-style: normal;
+  overflow-x: auto;
   padding: 0.25em;
+  white-space: pre;
 }
-
-  p > code {
-    white-space: pre;
-  }
 
 .link {
   .blue;
