--- a/css/dlx.css
+++ b/css/dlx.css
@@ -186,6 +186,51 @@ abbr {
 .bulleted li {
   display: list-item;
 }
+.button {
+  background-color: #3399FF;
+  color: white;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 0.25em 0.5em;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+.button:active {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
+}
+.button:hover,
+.button:focus {
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.1));
+}
+.button:disabled {
+  background-image: none;
+  box-shadow: none;
+  cursor: not-allowed;
+  opacity: 0.40;
+}
+button {
+  background-color: #3399FF;
+  color: white;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 0.25em 0.5em;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+button:active {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
+}
+button:hover,
+button:focus {
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.1));
+}
+button:disabled {
+  background-image: none;
+  box-shadow: none;
+  cursor: not-allowed;
+  opacity: 0.40;
+}
+cite {
+  font-style: italic;
+}
 code {
   background-color: #F5F2F0;
   border-radius: 3px;
@@ -195,6 +240,369 @@ code {
   overflow-x: auto;
   padding: 0.25em;
   white-space: pre;
+}
+dfn {
+  font-style: italic;
+}
+em {
+  font-style: italic;
+}
+.field {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+}
+.field:focus {
+  border-color: #3399FF;
+}
+.field:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+.field[disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=button] {
+  background-color: #3399FF;
+  color: white;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 0.25em 0.5em;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+input[type=button]:active {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
+}
+input[type=button]:hover,
+input[type=button]:focus {
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.1));
+}
+input[type=button]:disabled {
+  background-image: none;
+  box-shadow: none;
+  cursor: not-allowed;
+  opacity: 0.40;
+}
+input[type=color] {
+  display: block;
+}
+input[type=date] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+  flex-direction: row;
+}
+input[type=date]:focus {
+  border-color: #3399FF;
+}
+input[type=date]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=date][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=datetime] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+}
+input[type=datetime]:focus {
+  border-color: #3399FF;
+}
+input[type=datetime]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=datetime][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=datetime-local] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+  flex-direction: row;
+}
+input[type=datetime-local]:focus {
+  border-color: #3399FF;
+}
+input[type=datetime-local]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=datetime-local][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=email] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+}
+input[type=email]:focus {
+  border-color: #3399FF;
+}
+input[type=email]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=email][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=file] {
+  flex-direction: row;
+}
+input[type=month] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+  flex-direction: row;
+}
+input[type=month]:focus {
+  border-color: #3399FF;
+}
+input[type=month]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=month][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=number] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+}
+input[type=number]:focus {
+  border-color: #3399FF;
+}
+input[type=number]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=number][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=password] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+}
+input[type=password]:focus {
+  border-color: #3399FF;
+}
+input[type=password]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=password][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=reset] {
+  background-color: #3399FF;
+  color: white;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 0.25em 0.5em;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  background-color: #00F39D;
+}
+input[type=reset]:active {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
+}
+input[type=reset]:hover,
+input[type=reset]:focus {
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.1));
+}
+input[type=reset]:disabled {
+  background-image: none;
+  box-shadow: none;
+  cursor: not-allowed;
+  opacity: 0.40;
+}
+input[type=search] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+}
+input[type=search]:focus {
+  border-color: #3399FF;
+}
+input[type=search]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=search][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=submit] {
+  background-color: #3399FF;
+  color: white;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 0.25em 0.5em;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+input[type=submit]:active {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
+}
+input[type=submit]:hover,
+input[type=submit]:focus {
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.1));
+}
+input[type=submit]:disabled {
+  background-image: none;
+  box-shadow: none;
+  cursor: not-allowed;
+  opacity: 0.40;
+}
+input[type=tel] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+}
+input[type=tel]:focus {
+  border-color: #3399FF;
+}
+input[type=tel]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=tel][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=text] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+  display: flex;
+  width: 100%;
+}
+input[type=text]:focus {
+  border-color: #3399FF;
+}
+input[type=text]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=text][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=time] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+  flex-direction: row;
+}
+input[type=time]:focus {
+  border-color: #3399FF;
+}
+input[type=time]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=time][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=url] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+}
+input[type=url]:focus {
+  border-color: #3399FF;
+}
+input[type=url]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=url][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
+}
+input[type=week] {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+  flex-direction: row;
+}
+input[type=week]:focus {
+  border-color: #3399FF;
+}
+input[type=week]:focus:invalid {
+  border-color: #AA1F1F;
+  color: #CA3C3C;
+}
+input[type=week][disabled] {
+  background-color: #eaeded;
+  color: #cad2d3;
+  cursor: not-allowed;
 }
 .link {
   color: #3399FF;
