--- a/less/dlx.less
+++ b/less/dlx.less
@@ -127,6 +127,39 @@ abbr {
 
 }
 
+.button {
+
+  .blue-background;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 0.25em 0.5em;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+
+  &:active {
+    box-shadow: 0 0 0 1px rgba(0,0,0,0.15) inset, 0 0 6px rgba(0,0,0,0.20) inset;
+  }
+
+  &:hover, &:focus {
+    background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
+  }
+
+  &:disabled {
+    background-image: none;
+    box-shadow: none;
+    cursor: not-allowed;
+    opacity: 0.40;
+  }
+
+}
+
+button {
+  .button;
+}
+
+cite {
+  font-style: italic;
+}
+
 code {
   .gray-background;
   border-radius: 3px;
@@ -136,6 +169,122 @@ code {
   overflow-x: auto;
   padding: 0.25em;
   white-space: pre;
+}
+
+dfn {
+  font-style: italic;
+}
+
+em {
+  font-style: italic;
+}
+
+.field {
+
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #ddd;
+  cursor: text;
+  padding: 0.125em 0.25em;
+
+  &:focus {
+
+    border-color: @blue;
+
+    &:invalid {
+      border-color: @darkred;
+      color: @red;
+    }
+
+  }
+
+  &[disabled] {
+    background-color: #eaeded;
+    color: #cad2d3;
+    cursor: not-allowed;
+  }
+
+}
+
+input[type=button] {
+  .button;
+}
+
+input[type=color] {
+  display: block;
+}
+
+input[type=date] {
+  .field;
+  flex-direction: row; // Chrome
+}
+
+input[type=datetime] {
+  .field;
+}
+
+input[type=datetime-local] {
+  .field;
+  flex-direction: row; // Chrome
+}
+
+input[type=email] {
+  .field;
+}
+
+input[type=file] {
+  flex-direction: row; // Edge
+}
+
+input[type=month] {
+  .field;
+  flex-direction: row; // Chrome
+}
+
+input[type=number] {
+  .field;
+}
+
+input[type=password] {
+  .field;
+}
+
+input[type=reset] {
+  .button;
+  .verydarkgreen-background;
+}
+
+input[type=search] {
+  .field;
+}
+
+input[type=submit] {
+  .button;
+}
+
+input[type=tel] {
+  .field;
+}
+
+input[type=text] {
+  .field;
+  display: flex;
+  width: 100%;
+}
+
+input[type=time] {
+  .field;
+  flex-direction: row; // Chrome
+}
+
+input[type=url] {
+  .field;
+}
+
+input[type=week] {
+  .field;
+  flex-direction: row; // Chrome
 }
 
 .link {
