--- a/less/dlx.less
+++ b/less/dlx.less
@@ -34,18 +34,21 @@
 @green:                                          #23FFB1;
 @darkgreen:                                      #00FFA5;
 @verydarkgreen:                                  #00F39D;
+@superdarkgreen:                                 #00AB6E;
 
 .verylightgreen              { color:            @verylightgreen; }
 .lightgreen                  { color:            @lightgreen; }
 .green                       { color:            @green; }
 .darkgreen                   { color:            @darkgreen; }
 .verydarkgreen               { color:            @verydarkgreen; }
+.superdarkgreen              { color:            @superdarkgreen; }
 
 .verylightgreen-background   { background-color: @verylightgreen; }
 .lightgreen-background       { background-color: @lightgreen; }
 .green-background            { background-color: @green; }
 .darkgreen-background        { background-color: @darkgreen; }
 .verydarkgreen-background    { background-color: @verydarkgreen; }
+.superdarkgreen-background   { background-color: @superdarkgreen; color: white; }
 
 @verylightorange:                                #FFA97F;
 @lightorange:                                    #FF884F;
@@ -130,17 +133,18 @@ abbr {
 .button {
 
   .blue-background;
-  border-radius: 3px;
+  background-image: linear-gradient(135deg, rgba(255,255,255,0.15), transparent);
+  border-radius: 5px;
+  box-shadow: inset -1px -1px 2px 0px rgba(0,0,0,0.15), 1px 1px 2px #ccc;
   cursor: pointer;
   padding: 0.25em 0.5em;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 
   &:active {
-    box-shadow: 0 0 0 1px rgba(0,0,0,0.15) inset, 0 0 6px rgba(0,0,0,0.20) inset;
+    box-shadow: 0 0 0 1px rgba(0,0,0,0.15) inset, 0 0 6px rgba(0,0,0,0.2) inset;
   }
 
   &:hover, &:focus {
-    background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
+    background-image: linear-gradient(135deg, transparent, rgba(0,0,0,0.15));
   }
 
   &:disabled {
@@ -162,7 +166,7 @@ cite {
 
 code {
   .gray-background;
-  border-radius: 3px;
+  border-radius: 5px;
   font-family: 'Fira Mono', 'Monaco', 'Courier New', monospace;
   font-size: 0.75em;
   font-style: normal;
@@ -183,7 +187,7 @@ em {
 
   background-color: white;
   border: 1px solid #ccc;
-  border-radius: 3px;
+  border-radius: 5px;
   box-shadow: inset 0 1px 2px #ddd;
   cursor: text;
   padding: 0.125em 0.25em;
@@ -191,9 +195,11 @@ em {
   &:focus {
 
     border-color: @blue;
+    box-shadow: inset 0px 1px 2px @blue;
 
     &:invalid {
       border-color: @darkred;
+      box-shadow: inset 0px 1px 2px @darkred;
       color: @red;
     }
 
@@ -205,6 +211,15 @@ em {
     cursor: not-allowed;
   }
 
+}
+
+fieldset legend {
+  font-weight: bold;
+}
+
+.hanging {
+  margin-left: 1em;
+  text-indent: -1em;
 }
 
 input[type=button] {
@@ -252,7 +267,7 @@ input[type=password] {
 
 input[type=reset] {
   .button;
-  .verydarkgreen-background;
+  .superdarkgreen-background;
 }
 
 input[type=search] {
@@ -270,7 +285,6 @@ input[type=tel] {
 input[type=text] {
   .field;
   display: flex;
-  width: 100%;
 }
 
 input[type=time] {
@@ -287,11 +301,114 @@ input[type=week] {
   flex-direction: row; // Chrome
 }
 
+label {
+
+  align-items: center;
+  flex-direction: row;
+
+  span {
+    font-size: smaller;
+    font-weight: bold;
+  }
+
+  input {
+    margin: 0.5em;
+  }
+
+}
+
 .link {
   .blue;
   border-bottom: 0.075em solid white;
   &:link { .blue; }
-  &:visited { .blue; }
+  &:visited { .purple; }
   &:hover { border-bottom: 0.075em solid @blue; }
   &:active { .blue; }
+  &:visited:hover { border-bottom: 0.075em solid @purple; }
+  &:visited:active { .purple; }
+}
+
+  // elements whose contents are typically inline
+  blockquote, button, caption, dd, dt, figcaption, h1, h2, h3, h4, h5, h6, input, legend, option, output, p, pre, select, summary, textarea,
+  // inline elements
+  abbr, acronym, b, bdo, big, br, cite, code, del, dfn, em, i, ins, kbd, mark, q, samp, s, small, span, strike, strong, sub, sup, time, tt, var, {
+    > a {
+      .link;
+    }
+  }
+
+.numbered {
+
+  counter-reset: numbered;
+  list-style: none;
+
+  li {
+
+    counter-increment: numbered;
+    display: list-item;
+
+    &::before {
+      content: counter(numbered) '.';
+      font-weight: bold;
+      padding: 0.5em;
+    }
+
+  }
+
+}
+
+.page-title {
+  font-size: 2.5em;
+}
+
+.reference-list {
+
+  a { .link; }
+  h1 { .section-header; }
+
+  ol, ul {
+    list-style: disc outside none;
+    padding: 0.5em 0em;
+    padding-left: 1.5em;
+  }
+
+  li {
+    display: list-item;
+    padding: 0.25em 0em;
+
+    p {
+      display: block;
+      margin-left: 1.5em;
+      text-indent: -1.5em;
+    }
+
+  }
+
+}
+
+.section-header {
+  font-size: 1.75em;
+  font-weight: bold;
+  padding-bottom: 0.25em;
+  padding-top: 0.5em;
+}
+
+select {
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+strong {
+  color: @verydarkblue;
+  font-weight: bold;
+}
+
+.subsection-header {
+  font-size: 1.5em;
+  padding-bottom: 0.25em;
+  padding-top: 0.5em;
+}
+
+textarea {
+  .field;
 }
