--- a/less/dlx.less
+++ b/less/dlx.less
@@ -166,6 +166,7 @@ cite {
 
 code {
   .gray-background;
+  border: 1px solid black;
   border-radius: 5px;
   font-family: 'Fira Mono', 'Monaco', 'Courier New', monospace;
   font-size: 0.75em;
@@ -337,6 +338,10 @@ label {
     }
   }
 
+.minor-header {
+  font-size: 1.25em;
+}
+
 .numbered {
 
   counter-reset: numbered;
@@ -396,6 +401,7 @@ label {
 select {
   border: 1px solid black;
   border-radius: 5px;
+  padding: 0.25em;
 }
 
 strong {
@@ -407,6 +413,11 @@ strong {
   font-size: 1.5em;
   padding-bottom: 0.25em;
   padding-top: 0.5em;
+}
+
+.subsubsection-header {
+  font-size: 1.5em;
+  font-style: italic;
 }
 
 textarea {
