add icons to pattern library

--- a/patterns/patterns.less
+++ b/patterns/patterns.less
@@ -39,6 +39,26 @@ body {
   padding: 0.5em 1em;
 }
 
+#icons {
+
+  li {
+    align-items: center;
+    flex-direction: row;
+  }
+
+  img {
+    margin: 0.5rem;
+    width: 3rem;
+  }
+
+  img.favicon {
+    height: 1rem;
+    margin: 1.5rem;
+    width: 1rem;
+  }
+
+}
+
 .markup,
 .rendered,
 {
