--- a/patterns/patterns.css
+++ b/patterns/patterns.css
@@ -27,6 +27,19 @@ body > section {
   align-items: stretch;
   padding: 0.5em 1em;
 }
+#icons li {
+  align-items: center;
+  flex-direction: row;
+}
+#icons img {
+  margin: 0.5rem;
+  width: 3rem;
+}
+#icons img.favicon {
+  height: 1rem;
+  margin: 1.5rem;
+  width: 1rem;
+}
 .markup,
 .rendered {
   margin: 0.5em 1em;
