--- a/patterns/patterns.css
+++ b/patterns/patterns.css
@@ -11,7 +11,7 @@ body > label {
   top: 0;
 }
 body > section {
-  max-width: 700px;
+  max-width: 100%;
 }
 .color {
   align-items: center;
@@ -25,7 +25,11 @@ body > section {
 }
 #colors > section {
   align-items: stretch;
+  max-width: 500px;
   padding: 0.5em 1em;
+}
+#icons ul {
+  margin-top: 1rem;
 }
 #icons li {
   align-items: center;
