--- a/patterns/patterns.less
+++ b/patterns/patterns.less
@@ -15,7 +15,7 @@ body {
   }
 
   > section {
-    max-width: 700px;
+    max-width: 100%;
   }
 
 }
@@ -36,10 +36,15 @@ body {
 
 #colors > section {
   align-items: stretch;
+  max-width: 500px;
   padding: 0.5em 1em;
 }
 
 #icons {
+
+  ul {
+    margin-top: 1rem;
+  }
 
   li {
     align-items: center;
