include icons from DLx website
closes #75

--- a/less/dlx.less
+++ b/less/dlx.less
@@ -320,7 +320,7 @@ label {
 
 .link {
   .blue;
-  border-bottom: 0.075em solid white;
+  border-bottom: 0.075em solid transparent;
   &:link { .blue; }
   &:visited { .purple; }
   &:hover { border-bottom: 0.075em solid @blue; }
