--- a/patterns/patterns.less
+++ b/patterns/patterns.less
@@ -124,3 +124,8 @@ body {
   margin: 0.5em;
   width: 80%;
 }
+
+.white-link-example .rendered p {
+  background-color: @blue;
+  padding: 0.5em;
+}
