--- a/less/dlx.less
+++ b/less/dlx.less
@@ -110,7 +110,7 @@
 // GLOBAL
 body {
   box-sizing: border-box;
-  font-family: 'Fira Sans';
+  font-family: 'Fira Sans', 'Arial', sans-serif;
   line-height: 1.5;
 }
 
@@ -422,4 +422,51 @@ strong {
 
 textarea {
   .field;
+}
+
+.tooltip {
+
+  position: relative;
+
+  &::after {
+    .verydarkgreen-background;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px #ccc;
+    content: attr(title);
+    font-size: smaller;
+    left: 0.5em;
+    opacity: 0;
+    position: absolute;
+    top: 115%;
+    transition: all 0.3s ease;
+    width: 300px;
+    z-index: 2;
+  }
+
+  &:hover::after,
+  &:focus::after,
+  {
+    opacity: 1;
+    padding: 0.5em 1em;
+  }
+
+}
+
+  // elements whose contents are typically inline
+  blockquote, button, caption, dd, dt, figcaption, h1, h2, h3, h4, h5, h6, input, legend, option, output, p, pre, select, summary, textarea,
+  // inline elements
+  abbr, acronym, b, bdo, big, br, cite, code, del, dfn, em, i, ins, kbd, mark, q, samp, s, small, span, strike, strong, sub, sup, time, tt, var, {
+    > .tooltip {
+      text-decoration: underline dotted @verydarkgreen;
+    }
+  }
+
+.white-link {
+  border-bottom: 0.075em solid transparent;
+  color: white;
+  &:link { color: white; }
+  &:visited { color: white; }
+  &:hover { border-bottom: 0.075em solid white; }
+  &:visited:hover { border-bottom: 0.075em solid white; }
+  &:active { color: white; }
 }
